/cp 2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/50491
	* semantics.c (potential_constant_expression_1): Handle USING_DECL.

/testsuite
2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50491
	* g++.dg/cpp0x/pr50491.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179109 138bc75d-0d04-0410-961f-82ee72b054a4